# ssoo-2c21-tp

./: .gitignore  Makefile  README.md  pyproject.toml
data/: corpus_16x  corpus_4x
experiments/: Experimentation_analysis.ipynb  results.csv  results_max.csv
src/: CargarArchivos.cpp  CargarArchivos.hpp  Experimentation.cpp  HashMapConcurrente.cpp  HashMapConcurrente.hpp  ListaAtomica.hpp  UnitTests.cpp
