[tool.poetry]
name = "ssoo-2c21-tp"
version = "0.1.0"
description = ""
authors = ["Pablo Lopes Perera <plopesperera99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
jupyterlab = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
